--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Marshmallow==0.15.0
+Core Framework
+​Flask==3.0.0
+Werkzeug==3.0.1
+​Environment Variables (for .env file)
+​python-dotenv==1.0.0
+​Database (ORM)
+​Flask-SQLAlchemy==3.1.1
+​Serialization (converting objects to JSON)
+​Flask-Marshmallow==1.1.0
 marshmallow-sqlalchemy==0.29.0
-python-dotenv==1.0.0
-Werkzeug==2.3.7
+​Production Server (for deploying to the cloud)
+​gunicorn==21.2.0
